[package]
authors = ["jjlorenzo <jjlorenzo@gmail.com>"]
description = "in dir exec"
documentation = "https://docs.rs/exec/in-dir-exec"
edition = "2018"
license = "MIT"
name = "in-dir-exec"
readme = "README.md"
repository = "https://github.com/jjlorenzo/in-dir-exec"
version = "0.1.1"

[dependencies]
colored = "1.9.2"
exec = "0.3.1"
structopt = "0.3.9"
